--- a/LinRegProject/LinRegProject.vcxproj.filters
+++ b/LinRegProject/LinRegProject.vcxproj.filters
@@ -24,12 +24,18 @@
     <ClCompile Include="..\JunkDrawerUtils.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\BaseSolver.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\LinearRegressionSolver.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="..\JunkDrawerUtils.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\BaseSolver.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
