--- a/LinRegProject/LinRegProject.vcxproj.filters
+++ b/LinRegProject/LinRegProject.vcxproj.filters
@@ -33,4 +33,17 @@
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="ex1data1.txt">
+      <Filter>Resource Files</Filter>
+    </Text>
+    <Text Include="ex1data2.txt">
+      <Filter>Resource Files</Filter>
+    </Text>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="tres.csv">
+      <Filter>Resource Files</Filter>
+    </None>
+  </ItemGroup>
 </Project>
